# html_resources

./: MANIFEST.in  pyproject.toml
src/html_resources/: libraries.py  library.py  needed.py  resources.py  static.py  store.py
src/html_resources/testing/: whatever.txt
tests/: test_accessor.py  test_filestore.py  test_library.py  test_needed_resources.py  test_resource.py
tests/other_resources/docs/: french.txt  user.json
tests/resources/: sample.json
